2021/12/19 调完bug了，应该能用

--- a/static/cfg-tamper.ini
+++ b/static/cfg-tamper.ini
@@ -1,7 +1,15 @@
 [default]
+;0.0.0.0表示接收任意地址
 host = 0.0.0.0
-port = 5050
+;监听5050端口,对5050端口传来的流量进行判断和转发
+port = 8091
+;若不是CS的流量，则反代至jd.com
 redirectUrl = http://jd.com
-c2Url = http://42.193.97.228
+;本地CS Linster 端口，配合iptables规则ban掉，只允许127.0.0.1访问
+c2Url = http://127.0.0.1:8092
+
+
 [filter]
-ua =
+;如果UA中包含uaKey，则将流量重定向至c2Url,否则反代至redirectUrl。
+;因为ini文件以“;”做注释，且UA头内包含“;”,所以这里使用某个Key(默认Ortau)，配合cs的Profile文件修改UA头即可。
+uaKey = Ortau
